--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "partner_credit"]
 	path = partner_credit
 	url = https://github.com/humanytek-team/partner_credit
+[submodule "raloy_carta_porte"]
+	path = raloy_carta_porte
+	url = https://github.com/humanytek-team/raloy_carta_porte
