--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "raloy_contact_fiscal_position"]
 	path = raloy_contact_fiscal_position
 	url = https://github.com/humanytek-team/raloy_contact_fiscal_position
+[submodule "raloy_picking_slip_contact_notes"]
+	path = raloy_picking_slip_contact_notes
+	url = https://github.com/humanytek-team/raloy_picking_slip_contact_notes
