--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "mrp_add_remove_products"]
 	path = mrp_add_remove_products
 	url = https://github.com/humanytek-team/mrp_add_remove_products
+[submodule "raloy_mrp"]
+	path = raloy_mrp
+	url = https://github.com/humanytek-team/raloy_mrp
